<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_home"/>

        <item
            android:id="@+id/nav_text_to_mal"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_text_to_mal"/>
    </group>

    <item android:title="Coming Soon">
        <menu>
            <item
                android:id="@+id/nav_anilist"
                android:icon="@android:drawable/ic_menu_upload"
                android:title="@string/nav_anilist_import"
                android:enabled="false"/>
        </menu>
    </item>

</menu>
